fix docker compose run failed

--- a/tests/httpd.conf
+++ b/tests/httpd.conf
@@ -551,3 +551,5 @@ SSLRandomSeed connect builtin
     AuthUserFile "/usr/local/apache2/conf/.htdigest"
     Require valid-user
 </Location>
+
+LoadModule mpm_event_module modules/mod_mpm_event.so
